--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,5 @@
-/java/hebmorph-lucene/.idea/libraries/*.xml
-# git-ls-files --others --exclude-from=.git/info/exclude
-# Lines that start with '#' are comments.
-# For a project mostly in C, the following would be a good set of
-# exclude patterns (uncomment them if you want to use them):
-# *.[oa]
-# *~
-_Resharper*
-_Garage
-obj
-bin
-*.suo
-~$*
-*.user
-dotnet/packages/*
-build/
-workspace.xml
-tasks.xml
-java/target/
+bin/
+*.jar
+.directory
 *.java~
-Backup/
-/.idea/
+
